--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -5,37 +5,52 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:background="@drawable/run">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"></View>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="74dp"
+            android:layout_height="78dp"
+            android:text=""
+            android:background="@drawable/option"
+            android:gravity="top" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="7"
+        android:layout_gravity="bottom"
         android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="수신번호"
-            />
-        <EditText
-            android:id="@+id/addrEditText"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="01012345678"
-            />
-    </LinearLayout>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:weightSum="2"
         >
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:text=""
+            android:background="@drawable/sos"
+            android:layout_weight="1"/>
 
-    <Button
-        android:id="@+id/sendSmsBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="문자 메세지 전송"
-        />
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:text=""
+            android:background="@drawable/alerm"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 </LinearLayout>
