--- a/MyApplication/app/src/main/res/layout/activity_contact_info.xml
+++ b/MyApplication/app/src/main/res/layout/activity_contact_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -7,19 +7,47 @@
     android:layout_height="match_parent"
     tools:context="com.example.androidteamproject.ContactInfo">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="등록하세요" />
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="104dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="이전화면"
-        android:textSize="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="87dp" />
-</RelativeLayout>
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/inputName"
+            android:layout_width="400px"
+            android:layout_height="wrap_content"
+            android:text="이름" />
+        <EditText
+            android:id="@+id/inputPhonenumber"
+            android:layout_width="600px"
+            android:layout_height="wrap_content"
+            android:text="전화번호" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textviewName"
+            android:layout_width="400px"
+            android:layout_height="wrap_content"
+            android:text="이름"/>
+        <TextView
+            android:id="@+id/textviewPhonenumber"
+            android:layout_width="600px"
+            android:layout_height="wrap_content"
+            android:text="전번" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="1000px"
+            android:layout_height="match_parent"
+            />
+    </LinearLayout>
+</LinearLayout>
