연락처 등록및 삭제기능 추가

--- a/MyApplication/app/src/main/res/layout/activity_option.xml
+++ b/MyApplication/app/src/main/res/layout/activity_option.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/options"
     tools:context="com.example.androidteamproject.Option">
 
     <LinearLayout
@@ -12,14 +13,6 @@
         android:orientation="vertical"
         android:id="@+id/linearLayout">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="설정"
-            android:textSize="40dp"
-            android:textStyle="bold" />
-
     </LinearLayout>
 
     <Button
@@ -27,49 +20,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:text="연락망 직접 등록하기                                                   >"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="긴급 연락망 등록하기                                                        >"
+        android:layout_above="@+id/button5"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="20dp" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="연락망 연락처에서 불러오기                                         >"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/button4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="연락처 목록 불러오기                                                        >"
+        android:layout_above="@+id/button6"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="20dp" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="연락망 확인하기                                                          >"
-        android:layout_below="@+id/button5"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="18dp" />
+        android:text="긴급 연락망 확인하기                                                        >"
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="알람소리 교체                                                             >"
-        android:layout_below="@+id/button6"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="19dp" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="설정완료"
-        android:layout_below="@+id/button7"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="49dp" />
+        android:layout_marginBottom="169dp" />
 
 </RelativeLayout>
