--- a/MyApplication/app/src/main/res/layout/activity_contact_list.xml
+++ b/MyApplication/app/src/main/res/layout/activity_contact_list.xml
@@ -7,15 +7,10 @@
     android:orientation="vertical"
     tools:context="com.example.androidteamproject.ContactList">
 
-    <!--<ListView-->
-    <!--android:id="@+id/listView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content">-->
-    <!--</ListView>-->
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <ListView
+    android:id="@+id/listView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    </ListView>
 
 </LinearLayout>
