--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -3,25 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/title"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        android:background="@drawable/run">
+        >
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"></View>
+            android:layout_weight="1">
+        </View>
 
         <Button
             android:id="@+id/button"
             android:layout_width="74dp"
             android:layout_height="78dp"
             android:text=""
-            android:background="@drawable/option"
+            android:background="#00ff0000"
             android:gravity="top" />
 
     </LinearLayout>
@@ -32,6 +34,7 @@
         android:layout_weight="7"
         android:layout_gravity="bottom"
         android:orientation="horizontal"
+        android:background="#00ff0000"
         android:weightSum="2"
         >
 
@@ -40,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:text=""
-            android:background="@drawable/sos"
+            android:background="#00ff0000"
             android:layout_weight="1"/>
 
         <Button
@@ -48,7 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:text=""
-            android:background="@drawable/alerm"
+            android:background="#00ff0000"
             android:layout_weight="1" />
 
     </LinearLayout>
